--- a/src/scss/photon.scss
+++ b/src/scss/photon.scss
@@ -14,8 +14,8 @@ $default-color: $color;
 @import "node_modules/photonkit/sass/utilities.scss";
 
 // Components
-@import "node_modules/photonkit/sass/bars.scss";
-@import "node_modules/photonkit/sass/forms.scss";
+//@import "node_modules/photonkit/sass/bars.scss";
+//@import "node_modules/photonkit/sass/forms.scss";
 @import "node_modules/photonkit/sass/grid.scss";
 @import "node_modules/photonkit/sass/images.scss";
 @import "node_modules/photonkit/sass/lists.scss";
